--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@
 #spring.datasource.username= root
 #spring.datasource.password= root
 
-spring.datasource.url=jdbc:h2:file:~/testdb
+spring.datasource.url=jdbc:h2:file:~/db/banco
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username= sa
 spring.datasource.password= 
